# ib-mcp

./: README.md  pyproject.toml
ib_mcp/: server.py
